<resources>
    <string name="app_name">EVoting</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone #</string>
    <string name="create">Create</string>
    <string name="forgot">Forgot</string>
    <string name="code">Code</string>
    <string name="submit">Submit</string>



</resources>