<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/Name_Input"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:layout_marginTop="128dp"
        android:autofillHints=""
        android:ems="10"
        android:fadeScrollbars="true"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password_Input"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_Input" />

    <TextView
        android:id="@+id/Create_Text"
        android:layout_width="108dp"
        android:layout_height="40sp"
        android:layout_marginStart="96dp"
        android:text="@string/create_account"
        android:textAlignment="textStart"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintRight_toLeftOf="@+id/Forgot_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_Input"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Forgot_txt"
        android:layout_width="108dp"
        android:layout_height="40sp"
        android:text="@string/forgot_password"
        android:textAlignment="textStart"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toEndOf="@+id/Create_Text"
        app:layout_constraintTop_toBottomOf="@+id/Password_Input"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_Input" />

    <TextView
        android:id="@+id/Admin_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn"
        app:layout_constraintVertical_bias="0.194"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>


